PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016 PHP 7.0.9



23 Jun 2016 PHP 7.0.8

- Core:
  . Fixed bug #72221 (segfault, past-the-end access). (Lauri Kenttä)
  . Fixed bug #72218 (If host name cannot be resolved then PHP 7 crashes). 
    (Esminis at esminis dot lt)

- FPM:
  . Fixed bug #72308 (fastcgi_finish_request and logging environment
    variables). (Laruence)

- GD:
  . Fixed bug #72337 (invalid dimensions can lead to crash) (Pierre)

- Intl:
  . Fixed bug #64524 (Add intl.use_exceptions to php.ini-*). (Anatol)

- PCRE:
  . Fixed bug #72143 (preg_replace uses int instead of size_t). (Joe)

- PDO_pgsql:
  . Fixed bug #71573 (Segfault (core dumped) if paramno beyond bound).
    (Laruence)
  . Fixed bug #72294 (Segmentation fault/invalid pointer in connection
    with pgsql_stmt_dtor). (Anatol)

- Phpdbg:
  . Fixed bug #72284 (phpdbg fatal errors with coverage). (Bob)

- Postgres:
  . Fixed bug #72195 (pg_pconnect/pg_connect cause use-after-free). (Laruence)
  . Fixed bug #72197 (pg_lo_create arbitrary read). (Anatol)

- Standard:
  . Fixed bug #72369 (array_merge() produces references in PHP7). (Dmitry)
  . Fixed bug #72300 (ignore_user_abort(false) has no effect). (Laruence)
  . Fixed bug #72229 (Wrong reference when serialize/unserialize an object).
    (Laruence)
  . Fixed bug #72193 (dns_get_record returns array containing elements of
    type 'unknown'). (Laruence)
  . Fixed bug #72017 (range() with float step produces unexpected result).
    (Thomas Punt)

- XML:
  . Fixed bug #72206 (xml_parser_create/xml_parser_free leaks mem). (Joe)

- XMLRPC:
  . Fixed bug #72155 (use-after-free caused by get_zval_xmlrpc_type).
    (Joe, Laruence)

- Zip:
  . Fixed ug #72258 (ZipArchive converts filenames to unrecoverable form).
    (Anatol)

26 May 2016 PHP 7.0.7

- Core:
  . Fixed bug #72162 (use-after-free - error_reporting). (Laruence)